Update variables in primitives and reset

--- a/src/Nowruz/modules/general/components/avatarProfile/avatarProfile.module.scss
+++ b/src/Nowruz/modules/general/components/avatarProfile/avatarProfile.module.scss
@@ -4,7 +4,7 @@
   height: 72px;
   border-radius: 200px;
   border: solid 3px white;
-  box-shadow: $Shadows-md;
+  box-shadow: $shadow-md;
   position: relative;
   display: flex;
   align-items: center;
@@ -16,7 +16,7 @@
   height: 96px;
   border-radius: 200px;
   border: solid 4px white;
-  box-shadow: $Shadows-md;
+  box-shadow: $shadow-md;
   position: relative;
   display: flex;
   align-items: center;
@@ -29,7 +29,7 @@
   height: 160px;
   border-radius: 200px;
   border: solid 4px white;
-  box-shadow: $Shadows-md;
+  box-shadow: $shadow-md;
   position: relative;
   display: flex;
   align-items: center;
