--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -185,8 +185,8 @@ $font-size-6xl: 3.75rem;
 $font-size-7xl: 4.5rem;
 
 // Shadows
-$Focus-rings-brand: 0px 0px 0px 4px rgba(51, 110, 107, 0.24);
-$Focus-rings-brand-shadow-xs:
+$focus-rings-brand: 0px 0px 0px 4px rgba(51, 110, 107, 0.24);
+$focus-rings-brand-shadow-xs:
   0px 0px 0px 4px rgba(51, 110, 107, 0.24),
   0px 1px 2px 0px rgba(16, 24, 40, 0.05);
 $focus-ring-brand-shadow-sm:
