--- a/src/Nowruz/modules/general/components/slideoutMenu/sildeoutMenu.module.scss
+++ b/src/Nowruz/modules/general/components/slideoutMenu/sildeoutMenu.module.scss
@@ -7,7 +7,7 @@
   margin-left: auto;
   display: flex;
   flex-direction: column;
-  box-shadow: $Shadows-xl;
+  box-shadow: $shadow-xl;
   border: 1px solid $color-grey-200;
   background-color: white;
   @media screen and (max-width: 600px) {
