--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -61,6 +61,7 @@ $color-black: #000;
 $color-transparent: rgba(255,255,255,0);
 
 // Brand
+$color-primary-25: #f9fbfb;
 $color-primary-50: #f3f6f6;
 $color-primary-100: #e6eded;
 $color-primary-200: #ccdbda;
@@ -73,6 +74,7 @@ $color-primary-900: #001e1c;
 $color-primary-950: #001615;
 
 // Grey (light mode)
+$color-grey-25: #fcfcfd;
 $color-grey-50: #f9fafb;
 $color-grey-100: #f2f4f7;
 $color-grey-200: #eaecf0;
