--- a/src/Nowruz/modules/Jobs/components/JobListingCard/job-listing-card.module.scss
+++ b/src/Nowruz/modules/Jobs/components/JobListingCard/job-listing-card.module.scss
@@ -18,6 +18,7 @@
       font-size: 18px;
       font-weight: 600;
       color: $color-grey-900;
+      cursor: pointer;
     }
     .subTitle {
       font-size: 14px;
