--- a/src/Nowruz/modules/Jobs/components/OrganizationJobCard/organization-job-card.module.scss
+++ b/src/Nowruz/modules/Jobs/components/OrganizationJobCard/organization-job-card.module.scss
@@ -36,6 +36,9 @@
     .left {
       display: flex;
       flex-direction: row;
+      @media (max-width: 640px) {
+        flex-direction: column;
+      }
       gap: 12px;
       .applicants {
         font-size: 14px;
@@ -51,6 +54,10 @@
       }
     }
     .right {
+      @media (max-width: 640px) {
+        display: flex;
+        align-items: flex-end;
+      }
       .dotIcon {
         width: 6px;
         height: 6px;
