--- a/src/Nowruz/modules/general/components/alertMessage/alertMessage.module.scss
+++ b/src/Nowruz/modules/general/components/alertMessage/alertMessage.module.scss
@@ -4,7 +4,7 @@
   gap: 1rem;
   border-radius: $radius-xl;
   padding: 1rem;
-  align-items: center;
+  align-items: flex-start;
 }
 
 //'primary' | 'secondary' | 'error' | 'warning' | 'success';
