--- a/src/Nowruz/modules/general/components/featuredIconOutlined/featuredIconOutlined.module.scss
+++ b/src/Nowruz/modules/general/components/featuredIconOutlined/featuredIconOutlined.module.scss
@@ -8,27 +8,37 @@
 .outer-sm {
   height: 34px;
   width: 34px;
+  min-height: 34px;
+  min-width: 34px;
   border-radius: 24px;
 }
 
 .inner-sm {
   height: 24px;
   width: 24px;
+  min-height: 24px;
+  min-width: 24px;
   border-radius: 24px;
 }
 
 .outer-md {
   height: 38px;
   width: 38px;
+  min-height: 38px;
+  min-width: 38px;
   border-radius: 24px;
 }
 
 .inner-md {
   height: 28px;
   width: 28px;
+  min-height: 28px;
+  min-width: 28px;
   border-radius: 24px;
 }
 .outer-lg {
+  min-height: 42px;
+  min-width: 42px;
   height: 42px;
   width: 42px;
   border-radius: 24px;
@@ -37,17 +47,23 @@
 .inner-lg {
   height: 32px;
   width: 32px;
+  min-height: 32px;
+  min-width: 32px;
   border-radius: 24px;
 }
 .outer-xl {
   height: 46px;
   width: 46px;
+  min-height: 46px;
+  min-width: 46px;
   border-radius: 24px;
 }
 
 .inner-xl {
   height: 36px;
   width: 36px;
+  min-height: 36px;
+  min-width: 36px;
   border-radius: 24px;
 }
 .primary-outer {
