--- a/src/Nowruz/modules/general/components/slideoutMenu/sildeoutMenu.module.scss
+++ b/src/Nowruz/modules/general/components/slideoutMenu/sildeoutMenu.module.scss
@@ -1,10 +1,12 @@
 @import 'src/components/_primitives.scss';
 
 .container {
+  position: fixed;
+  right: 0;
+  top: 0;
   height: 100%;
   width: 400px;
-  margin-right: 0;
-  margin-left: auto;
+  z-index: 1200;
   display: flex;
   flex-direction: column;
   box-shadow: $shadow-xl;
