--- a/src/Nowruz/modules/layout/components/statusDropDown/statusDropDown.module.scss
+++ b/src/Nowruz/modules/layout/components/statusDropDown/statusDropDown.module.scss
@@ -29,13 +29,16 @@
     0px 4px 6px -2px rgba(16, 24, 40, 0.03),
     0px 12px 16px -4px rgba(16, 24, 40, 0.08);
   background-color: $color-white;
-  position: absolute;
-  top: 48px;
+  margin-top: 10px;
   padding: 4px 0;
   display: flex;
   flex-direction: column;
 }
+.parentMenu {
+  position: absolute;
 
+  top: 38px;
+}
 .menu .item {
   padding: 11px 16px;
   flex: 1;
