TAS-988/delete an account in Nowruz

--- a/src/Nowruz/pages/setting/sections/account/account.module.scss
+++ b/src/Nowruz/pages/setting/sections/account/account.module.scss
@@ -40,3 +40,11 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.modalStyle {
+    @apply p-6 ;
+    #modal-box {
+        z-index: 9999;
+    }
+    
+}
