--- a/src/Nowruz/modules/general/components/Button/button.module.scss
+++ b/src/Nowruz/modules/general/components/Button/button.module.scss
@@ -78,6 +78,29 @@
   }
 }
 
+.info {
+  &:global(.MuiButton-root) {
+    text-transform: none;
+    box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+    border-radius: 8px;
+    height: 44px;
+    font-weight: 600;
+    font-size: 16px;
+    background-color: $color-white;
+    color: $color-grey-600;
+    border: 1px solid $color-grey-300;
+    &:disabled {
+      background-color: $color-grey-700;
+      color: $color-white;
+      cursor: not-allowed;
+    }
+  }
+  &:global(.MuiButton-text) {
+    background-color: transparent;
+    box-shadow: none;
+  }
+}
+
 .button {
   background-color: black;
 }
