--- a/src/Nowruz/pages/chats/chats.module.scss
+++ b/src/Nowruz/pages/chats/chats.module.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: flex-start;
   border-right: solid 1px $color-grey-200;
+  overflow-y: auto;
   @media screen and (max-width: 600px) {
     width: 100%;
   }
