--- a/src/Nowruz/modules/general/components/slideoutMenu/sildeoutMenu.module.scss
+++ b/src/Nowruz/modules/general/components/slideoutMenu/sildeoutMenu.module.scss
@@ -21,10 +21,26 @@
   width: 100%;
   height: 72px;
 }
+
 .content {
   padding: 0 24px;
+  height: 100%;
   overflow-y: auto;
   @media screen and (max-width: 600px) {
     padding: 0 16px;
   }
+}
+
+.headerOverwrite {
+  border-bottom: solid 1px #eaecf0;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 16px 24px;
+}
+
+.closeButtonOverwrite {
+  margin: 0 !important;
 }
