--- a/src/Nowruz/pages/Credentials/credentials.module.scss
+++ b/src/Nowruz/pages/Credentials/credentials.module.scss
@@ -6,6 +6,8 @@
     padding: 2rem 1rem 4rem;
   }
   .header {
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 1.5rem;
     gap: 0.25rem;
     .title {
