--- a/src/Nowruz/modules/credentials/credentialsList/credentialsList.module.scss
+++ b/src/Nowruz/modules/credentials/credentialsList/credentialsList.module.scss
@@ -1,21 +1,25 @@
 .tableCereditList {
-    @apply table-auto w-full mt-6 rounded-t-lg;
-    thead {
-        tr {
-            @apply rounded-t-xl;
-            border: 1px solid #eaecf0;
-            th {
-                @apply px-6 py-3;
+    @apply w-full mt-6 rounded-t-lg;
+    border: 1px solid #eaecf0;
+    table {
+        @apply table-auto w-full;
+        thead {
+            @apply px-6 py-3 rounded-t-lg;
+            tr {
+                @apply rounded-t-xl bg-Gray-light-mode-50;
+                
+                th {
+                    @apply px-6 py-3;
+                }
             }
         }
-    }
-    tbody {
-        tr {
-            td {
-                @apply  px-6 py-4;
+        tbody {
+            tr {
+                td {
+                    @apply  px-6 py-4;
+                }
+                border-top: none;
             }
-            border: 1px solid #eaecf0;
-            border-top: none;
         }
     }
 }
