complete use credentials logics

--- a/src/Nowruz/modules/credentials/creditStatus/creditStatus.module.scss
+++ b/src/Nowruz/modules/credentials/creditStatus/creditStatus.module.scss
@@ -1,4 +1,4 @@
 .status {
-    border: 1px solid #475467;
-    @apply rounded-2xl flex items-center justify-center py-1 px-1 text-Gray-light-mode-700 text-xs font-medium;
+  border: 1px solid #d0d5dd;
+  @apply rounded-2xl flex items-center justify-center py-1 px-1 text-xs font-medium;
 }
