--- a/src/Nowruz/modules/general/components/slideoutMenu/sildeoutMenu.module.scss
+++ b/src/Nowruz/modules/general/components/slideoutMenu/sildeoutMenu.module.scss
@@ -20,6 +20,7 @@
 .header {
   width: 100%;
   height: 72px;
+  align-items: center;
 }
 
 .content {
@@ -37,7 +38,6 @@
   height: auto;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
   padding: 16px 24px;
 }
 
