--- a/src/Nowruz/modules/wallet/components/connectButton/connectButton.module.scss
+++ b/src/Nowruz/modules/wallet/components/connectButton/connectButton.module.scss
@@ -7,7 +7,7 @@
   background-color: $color-white;
   border: 1px solid $color-grey-300;
   padding: 10px 18px;
-  border-radius: 2rem;
+  border-radius: 8px;
   cursor: pointer;
   font-size: 1rem;
   font-weight: 600;
