chore: fix all reported issues

--- a/src/Nowruz/modules/Search/components/ResultList/result-list.module.scss
+++ b/src/Nowruz/modules/Search/components/ResultList/result-list.module.scss
@@ -8,6 +8,7 @@
   margin: 0 8px;
   display: flex;
   justify-content: flex-start;
+  width: 100%;
   &:hover {
     background-color: $color-grey-50;
   }
