--- a/src/Nowruz/pages/wallet/transactionDetails/transactionDetails.module.scss
+++ b/src/Nowruz/pages/wallet/transactionDetails/transactionDetails.module.scss
@@ -20,12 +20,27 @@
   align-items: center;
   justify-content: space-between;
 }
-.withdrawModal {
-  max-width: 480px;
-  height: fit-content;
+
+.withdrawAccount {
+  padding: 16px;
+  border: 1px solid $color-grey-300;
   border-radius: 12px;
-  @media screen and (max-width: 600px) {
-    margin: auto 16px 80px 16px;
-    height: fit-content;
-  }
+  display: flex;
+  gap: 12px;
+}
+
+.modalTitle {
+  @apply text-lg font-semibold leading-5 text-Gray-light-mode-900;
+}
+
+.modalRowTitles {
+  @apply text-sm font-medium leading-5 text-Gray-light-mode-700;
+}
+
+.modalSubtitles {
+  @apply text-sm font-normal leading-5 text-Gray-light-mode-600;
+}
+
+.modalAmount {
+  @apply text-2xl font-semibold leading-8 text-Gray-light-mode-900;
 }
