--- a/src/Nowruz/modules/contract/components/reviewModal/reviewModal.module.scss
+++ b/src/Nowruz/modules/contract/components/reviewModal/reviewModal.module.scss
@@ -4,7 +4,7 @@
     width: 480px;
 }
 .footer {
-   @apply lg:flex justify-between pt-6 gap-3 p-6 mt-6;
+   @apply justify-between pt-6 gap-3 p-6 mt-6 flex flex-col-reverse md:flex-row;
    border-top: 1px solid $color-grey-300;
    Button {
     @apply mb-2;
