--- a/src/Nowruz/pages/jobs/detail/jobDetail.module.scss
+++ b/src/Nowruz/pages/jobs/detail/jobDetail.module.scss
@@ -43,3 +43,25 @@
   letter-spacing: 0em;
   color: $color-grey-600;
 }
+
+.section1 {
+  width: 100%;
+  display: flex;
+  gap: 1rem;
+  border: 1px solid $color-primary-300;
+  border-radius: $radius-xl;
+  background-color: $color-primary-25;
+  padding: 1rem;
+  align-items: center;
+}
+
+.section2 {
+  width: 100%;
+  display: flex;
+  gap: 1rem;
+  border: 1px solid $color-grey-300;
+  border-radius: $radius-xl;
+  background-color: $color-grey-25;
+  padding: 1rem;
+  align-items: center;
+}
