--- a/src/Nowruz/modules/layout/components/linkItem/linkItem.module.scss
+++ b/src/Nowruz/modules/layout/components/linkItem/linkItem.module.scss
@@ -1,14 +1,13 @@
 @import 'src/components/_primitives.scss';
 .container {
-  width: 100%;
-  height: 48px;
+
+  align-items: flex-start;
+  align-self: stretch;
   background-color: $color-primary-700;
-  padding: 8px 12px 8px 12px;
-  border-radius: 0.375rem;
+  border-radius: 6px;
   display: flex;
-  gap: 8px;
-  align-items: flex-end;
-  cursor: pointer;
+  gap: 0.5rem;
+  padding: 0.75rem;
 
   @media screen and (max-width: 600px) {
     height: 40px;
@@ -18,16 +17,27 @@
 
 .container:hover,
 .container:focus {
+
   background-color: $color-primary-600;
+  transition: background-color 200ms linear;
+
   @media screen and (max-width: 600px) {
     background-color: $color-grey-50;
   }
 }
 
+.container div {
+  align-items: center;
+  display: flex;
+  height: 1.5rem;
+  justify-content: center;
+  width: 1.5rem;
+}
+
 .itemLabel {
   color: $color-primary-100;
   font-weight: 600;
-  font-size: 16px;
+  
   @media screen and (max-width: 600px) {
     color: $color-grey-700;
   }
