add validation message to password page

--- a/src/Nowruz/modules/settings/components/password/password.module.scss
+++ b/src/Nowruz/modules/settings/components/password/password.module.scss
@@ -9,3 +9,12 @@
     font-weight: 400;
     line-height: 20px;
 }
+.passwordWarning {
+    border: 1px solid #FEC84B;
+    color: #B54708;
+    border-radius: 12px;
+    padding: 12px;
+    gap: 16px;
+    display: flex;
+    align-items: center;
+}
