--- a/src/index.scss
+++ b/src/index.scss
@@ -37,7 +37,20 @@ pwa-action-sheet {
   width: 100vw;
 }
 
-html,
+html {
+  ::-webkit-scrollbar {
+    @media screen and (min-width: 600px) {
+      width: 4px;
+    }
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--color-gray-03);
+    border-radius: 12px;
+  }
+  overflow: hidden;
+  width: 100%;
+}
 body {
   ::-webkit-scrollbar {
     @media screen and (min-width: 600px) {
@@ -49,6 +62,11 @@ body {
     background-color: var(--color-gray-03);
     border-radius: 12px;
   }
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 //shared container for all sign up pages
