--- a/src/index.scss
+++ b/src/index.scss
@@ -37,20 +37,7 @@ pwa-action-sheet {
   width: 100vw;
 }
 
-html {
-  ::-webkit-scrollbar {
-    @media screen and (min-width: 600px) {
-      width: 4px;
-    }
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background-color: var(--color-gray-03);
-    border-radius: 12px;
-  }
-  overflow: hidden;
-  width: 100%;
-}
+html,
 body {
   ::-webkit-scrollbar {
     @media screen and (min-width: 600px) {
@@ -62,11 +49,6 @@ body {
     background-color: var(--color-gray-03);
     border-radius: 12px;
   }
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
 }
 
 //shared container for all sign up pages
