--- a/src/Nowruz/modules/Search/components/Modal/modal.module.scss
+++ b/src/Nowruz/modules/Search/components/Modal/modal.module.scss
@@ -19,4 +19,8 @@
   border-radius: 1rem;
   cursor: initial;
   overflow-y: scroll;
+  @media screen and (max-width: 600px) {
+    margin: 0;
+    border-radius: 0;
+  }
 }
