fix: selected value in RadioGroup component

--- a/src/Nowruz/modules/general/components/RadioGroup/radio-group.module.scss
+++ b/src/Nowruz/modules/general/components/RadioGroup/radio-group.module.scss
@@ -1,4 +1,14 @@
 @import 'src/components/_primitives.scss';
+
+.label {
+  margin-bottom: 6px;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0em;
+  color: $color-grey-700;
+}
+
 .optionsText {
   font-size: 16px;
   font-weight: 500;
