chore: fix notification touching status bar on ios

--- a/src/Nowruz/modules/Jobs/components/OrganizationJobCard/organization-job-card.module.scss
+++ b/src/Nowruz/modules/Jobs/components/OrganizationJobCard/organization-job-card.module.scss
@@ -27,7 +27,7 @@
     }
 
     @media (max-width: 640px) {
-      flex-direction: column;
+      flex-direction: row;
       padding: 20px;
     }
   }
