--- a/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
+++ b/src/Nowruz/modules/userProfile/components/profileHeader/profileHeader.module.scss
@@ -2,15 +2,13 @@
 
 .container {
   width: 100%;
-  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .banner {
-  position: absolute;
-  top: 0;
   width: 100%;
   z-index: -2;
-  //   background-image: linear-gradient(#ace0f9, #fff1eb);
 }
 
 .iconCamera {
@@ -30,8 +28,7 @@
 
 .avatar {
   width: 100%;
-  position: absolute;
-  bottom: 0;
+  margin-top: -40px;
   background-color: transparent;
   display: flex;
   align-items: center;
@@ -91,14 +88,6 @@
   gap: 12px;
 }
 
-.shareButton {
-  flex: 1;
-  height: 2.5rem;
-  font-size: 0.875rem;
-  gap: 0.375rem;
-  text-transform: none;
-}
-
 .status {
   height: 28px;
   padding: 4px 10px 4px 10px;
@@ -120,8 +109,6 @@
 
 .avatarMobile {
   width: 100%;
-  position: absolute;
-  bottom: 0;
   display: flex;
   flex-direction: column;
   background-color: transparent;
@@ -129,4 +116,5 @@
   align-items: flex-start;
   padding: 0 24px 0 24px;
   gap: 24px;
+  margin-top: -48px;
 }
