--- a/src/Nowruz/modules/userProfile/components/impact/impact.module.scss
+++ b/src/Nowruz/modules/userProfile/components/impact/impact.module.scss
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  height: 100%;
 }
 .titleDiv {
   display: flex;
@@ -62,7 +63,9 @@
   border-color: $color-grey-300;
   background-color: white;
   text-transform: none;
-  margin-top: 20px;
+  // margin-top: 20px;
+  margin-top: auto;
+  margin-bottom: 0;
 }
 
 .button:hover {
