Modified refer page

--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -173,9 +173,11 @@ $color-grey-blue-950: #0d0f1c;
 
 // Wild blue
 $color-wild-blue-100: #eaf0f9;
+$color-wild-blue-500: #a1b2d9;
 
 //Dark vanilla
 $color-dark-vanilla-100: #f2f4ec;
+$color-dark-vanilla-500: #c0c6a0;
 
 //Apricot
 $color-appricot-100: #fcf3e5;
