--- a/src/Nowruz/modules/general/components/modal/modal.module.scss
+++ b/src/Nowruz/modules/general/components/modal/modal.module.scss
@@ -1,46 +1,85 @@
 @import 'src/components/_primitives.scss';
 .container {
-  @media (min-width: 640px) {
-    width: 640px;
-    margin: auto;
-    max-height: 90%;
-    height: fit-content;
     display: flex;
-    align-items: center;
-  }
+    flex-direction: column;
+    margin: auto;
+    background-color: $color-white;
+    z-index: 30;
+
+    @media (min-width: 640px) {
+        width: 640px;
+        margin: auto;
+        max-height: 90%;
+        height: fit-content;
+        display: flex;
+        align-items: center;
+        border-radius: 12px;
+    }
+    @media (max-width: 640px) {
+        width: 100%;
+    }
+}
+
+.mobileCentered {
+    @media (max-width: 640px) {
+        max-width: calc(100% - 32px);
+        width: calc(100% - 32px);
+        margin: auto;
+        height: fit-content;
+        max-height: calc(100% - 32px);
+        overflow-y: auto;
+        border-radius: 12px;
+    }
+}
+.mobileFullHeight {
+    @media (max-width: 640px) {
+        width: 100%;
+        height: 100%;
+        max-height: 100%;
+    }
+}
+
+.mobileDefault {
+    @media (max-width: 640px) {
+        width: 100%;
+        margin-top: 80px;
+        border-radius: 12px 12px 0 0;
+        height: calc(100% - 80px);
+        max-height: calc(100% - 80px);
+    }
 }
 
 .header {
-  position: absolute;
-  width: 100%;
-  top: 0;
+    position: absolute;
+    width: 100%;
+    top: 0;
 }
 
 .title {
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 28px;
-  letter-spacing: 0em;
-  color: $color-grey-900;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: 0em;
+    color: $color-grey-900;
 }
 
 .subtitle {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 20px;
-  letter-spacing: 0em;
-  color: $color-grey-600;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0em;
+    color: $color-grey-600;
 }
 
 .closeBtn {
-  border: none;
-  border-radius: 8px;
-  padding: 10px;
-  width: 44px;
-  height: 44px;
+    border: none;
+    border-radius: 8px;
+    padding: 10px;
+    width: 44px;
+    height: 44px;
 }
 
 .closeBtn:focus-visible {
-  outline: 5px auto Highlight;
-  outline: 5px auto -webkit-focus-ring-color;
+    outline: 5px auto Highlight;
+    outline: 5px auto -webkit-focus-ring-color;
 }
