--- a/src/Nowruz/pages/Credentials/credentials.module.scss
+++ b/src/Nowruz/pages/Credentials/credentials.module.scss
@@ -1,26 +1,28 @@
 @import 'src/components/_primitives.scss';
 
 .container {
-  padding: 2rem;
-  @media (max-width: 640px) {
-    padding: 2rem 1rem 4rem;
-  }
-  .header {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.5rem;
-    gap: 0.25rem;
-    .title {
-      font-size: 1.875rem;
-      font-weight: 600;
-      line-height: 2.375rem;
-      color: $color-grey-900;
+    padding: 2rem;
+    @media (max-width: 640px) {
+        padding: 2rem 1rem 4rem;
+        width: 100%;
+        overflow-x: auto;
     }
-    .subtitle {
-      font-size: 1rem;
-      font-weight: 400;
-      line-height: 1.5rem;
-      color: $color-grey-600;
+    .header {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 1.5rem;
+        gap: 0.25rem;
+        .title {
+            font-size: 1.875rem;
+            font-weight: 600;
+            line-height: 2.375rem;
+            color: $color-grey-900;
+        }
+        .subtitle {
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 1.5rem;
+            color: $color-grey-600;
+        }
     }
-  }
 }
