Revert "TAS1110/implemented KYB"

--- a/src/Nowruz/modules/credentials/credentialsList/credentialsList.module.scss
+++ b/src/Nowruz/modules/credentials/credentialsList/credentialsList.module.scss
@@ -1,37 +1,31 @@
 .tableCereditList {
-    @apply w-full mt-6 rounded-t-lg;
-    border: 1px solid #eaecf0;
-    table {
-        @apply table-auto;
-        thead {
-            @apply px-6 py-3 rounded-t-lg;
-            tr {
-                @apply rounded-t-xl bg-Gray-light-mode-50;
+  @apply w-full mt-6 rounded-t-lg;
+  border: 1px solid #eaecf0;
+  table {
+    @apply table-auto w-full;
+    thead {
+      @apply px-6 py-3 rounded-t-lg;
+      tr {
+        @apply rounded-t-xl bg-Gray-light-mode-50;
 
-                th {
-                    @apply px-6 py-3;
-                    width: auto;
-                    white-space: nowrap;
-                }
-                th:first-child {
-                    width: 100%;
-                }
-            }
+        th {
+          @apply px-6 py-3;
         }
-        tbody {
-            tr {
-                td {
-                    @apply px-6 py-4;
-                }
-
-                border-top: none;
-            }
-        }
+      }
     }
+    tbody {
+      tr {
+        td {
+          @apply px-6 py-4;
+        }
+        border-top: none;
+      }
+    }
+  }
 }
 
 .paginationBox {
-    @apply px-6 py-4 rounded-b-xl;
-    border: 1px solid #eaecf0;
-    border-top: none;
+  @apply px-6 py-4 rounded-b-xl;
+  border: 1px solid #eaecf0;
+  border-top: none;
 }
