--- a/src/Nowruz/modules/general/components/avatar/avatar.module.scss
+++ b/src/Nowruz/modules/general/components/avatar/avatar.module.scss
@@ -1,56 +1,56 @@
 @import 'src/components/_primitives.scss';
 
 .container {
-  position: relative;
-  width: 3rem;
-  height: 3rem;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  background-color: $color-grey-100;
+    position: relative;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    background-color: $color-grey-100;
 }
 .avatarBorder {
-  border: 3px solid $color-white;
+    border: 3px solid $color-white;
 }
 .imageContainer {
-  width: 3rem;
-  height: 3rem;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-size: 65%;
-  background-position: 50%;
-  background-repeat: no-repeat;
-  overflow: hidden;
-  cursor: pointer;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-size: 65%;
+    background-position: 50%;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    cursor: pointer;
 }
 .img {
-  max-width: 100%;
-  width: 100%;
-  height: 100%;
+    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .badge {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 6px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6px;
 }
 
 .verifiedBadge {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 20px;
-  height: 20px;
-
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 20px;
+    height: 20px;
 }
