--- a/src/Nowruz/modules/general/components/input/input.module.scss
+++ b/src/Nowruz/modules/general/components/input/input.module.scss
@@ -1,134 +1,139 @@
 @import 'src/components/_primitives.scss';
 .label {
-  margin-bottom: 6px;
-  color: $color-grey-700;
+    margin-bottom: 6px;
+    color: $color-grey-700;
 }
 
 .icon {
-  color: $color-error-600;
+    color: $color-error-600;
 }
 
 .msg {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 20px;
-  letter-spacing: 0em;
-  text-align: left;
-  margin-top: 6px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
+    margin-top: 6px;
 }
 .successMsg {
-  color: $color-success-600;
+    color: $color-success-600;
 }
 .errorMsg {
-  color: $color-error-500;
+    color: $color-error-500;
 }
 
 .default {
-  input {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: $color-grey-900;
-    width: 100%;
-    padding-top: 0;
-    padding-bottom: 0;
-    &::placeholder {
-      color: $color-grey-500;
-      opacity: 1;
+    input {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: $color-grey-900;
+        width: 100%;
+        padding-top: 0;
+        padding-bottom: 0;
+        &::placeholder {
+            color: $color-grey-500;
+            opacity: 1;
+        }
+        flex: 8;
     }
-    flex: 8;
-  }
 
-  fieldset {
-    border-radius: 8px;
-    box-shadow: 0px 1px 2px 0px #1018280d;
-  }
-  textarea {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
-    color: $color-grey-900;
-    padding-top: 0;
-    padding-bottom: 0;
-    width: 100%;
-    height: 100% !important;
-    overflow-y: auto !important;
-    &::placeholder {
-      color: $color-grey-500;
-      opacity: 1;
+    fieldset {
+        border-radius: 8px;
+        box-shadow: 0px 1px 2px 0px #1018280d;
     }
-  }
+    textarea {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: $color-grey-900;
+        padding-top: 0;
+        padding-bottom: 0;
+        width: 100%;
+        height: 100% !important;
+        overflow-y: auto !important;
+        &::placeholder {
+            color: $color-grey-500;
+            opacity: 1;
+        }
+    }
 }
 
 .defaultColor {
-  fieldset {
-    border: 1px solid $color-grey-300 !important;
-  }
+    fieldset {
+        border: 1px solid $color-grey-300 !important;
+    }
 }
 
 .defaultColor:focus-within {
-  fieldset {
-    border: 1px solid $color-primary-300 !important;
-    box-shadow: 0px 0px 0px 4px $color-primary-100;
-  }
+    fieldset {
+        border: 1px solid $color-primary-300 !important;
+        box-shadow: 0px 0px 0px 4px $color-primary-100;
+    }
 }
 
 .errorColor {
-  fieldset {
-    border: 1px solid $color-error-300 !important;
-  }
+    fieldset {
+        border: 1px solid $color-error-300 !important;
+    }
 }
 
 .errorColor:focus-within {
-  fieldset {
-    box-shadow: 0px 0px 0px 4px $color-error-100;
-  }
+    fieldset {
+        box-shadow: 0px 0px 0px 4px $color-error-100;
+    }
 }
 
 .prefix {
-  min-height: 44px;
-  border-right: solid 1px $color-grey-300;
-  padding-right: 14px;
+    min-height: 44px;
+    border-right: solid 1px $color-grey-300;
+    padding-right: 14px;
+}
+.prefix-no-border {
+    border: none;
+    min-height: 44px;
+    padding-right: 14px;
 }
 .postfix {
-  min-height: 44px;
-  border-left: solid 1px $color-grey-300;
-  padding-left: 14px;
+    min-height: 44px;
+    border-left: solid 1px $color-grey-300;
+    padding-left: 14px;
 }
 .postfix-no-border {
-  border: none;
-  min-height: 44px;
-  padding-left: 14px;
+    border: none;
+    min-height: 44px;
+    padding-left: 14px;
 }
 .labelContainer {
-  margin-bottom: 6px;
+    margin-bottom: 6px;
 }
 .label {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 20px;
-  letter-spacing: 0;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0;
 }
 .hintMsg {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px;
-  color: $color-grey-600;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    color: $color-grey-600;
 }
 .iconBtn {
-  border: none;
-  border-radius: 8px;
-  padding: 0;
+    border: none;
+    border-radius: 8px;
+    padding: 0;
 }
 .iconBtn:focus {
-  outline: 5px auto Highlight;
-  outline: 5px auto -webkit-focus-ring-color;
+    outline: 5px auto Highlight;
+    outline: 5px auto -webkit-focus-ring-color;
 }
 .prefixDropdown {
-  // width: 150px;
+    // width: 150px;
 }
