fix: action button conditions and texts in experience/education certificate

--- a/src/Nowruz/modules/userProfile/components/about/about.module.scss
+++ b/src/Nowruz/modules/userProfile/components/about/about.module.scss
@@ -1,53 +1,53 @@
 @import 'src/components/_primitives.scss';
 
 .title {
-  display: flex;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 28px;
-  letter-spacing: 0em;
-  color: $color-grey-900;
+    display: flex;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: 0em;
+    color: $color-grey-900;
 }
 .editBtn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 0;
-  margin-left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 0;
+    margin-left: auto;
 }
 .addBtn {
-  width: fit-content;
-  display: flex;
-  gap: 8px;
-  font-size: 14px;
-  font-weight: 600;
-  line-height: 20px;
-  letter-spacing: 0em;
-  color: $color-primary-700;
-  text-transform: none;
-  border: none;
+    width: fit-content;
+    display: flex;
+    gap: 8px;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0em;
+    color: $color-primary-700;
+    text-transform: none;
+    border: none;
 }
 .addBtn:hover {
-  background-color: none;
+    background-color: none;
 }
 
 .mission {
-  p {
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5rem;
-    color: $color-grey-600;
-  }
-  .seeMoreBtn {
-    color: $color-primary-700;
-    font-weight: 500;
-    margin-left: 0.5rem;
-    cursor: pointer;
-  }
+    p {
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5rem;
+        color: $color-grey-600;
+    }
+    .seeMoreBtn {
+        color: $color-primary-700;
+        font-weight: 500;
+        margin-left: 0.5rem;
+        cursor: pointer;
+    }
 }
 
 .status {
-  border: 1px solid #d0d5dd;
-  width: 30%;
-  @apply rounded-2xl flex items-center justify-center py-1 px-1 text-xs font-medium;
+    border: 1px solid #d0d5dd;
+    width: 30%;
+    @apply rounded-2xl flex items-center justify-center gap-1 py-1 px-1 text-xs font-medium;
 }
