--- a/src/Nowruz/modules/Jobs/components/JobListingCard/job-listing-card.module.scss
+++ b/src/Nowruz/modules/Jobs/components/JobListingCard/job-listing-card.module.scss
@@ -125,6 +125,8 @@
             font-weight: 600;
             line-height: 20px;
             color: $color-primary-700;
+            margin-left: auto;
+            margin-right: 0;
         }
     }
 }
