--- a/src/Nowruz/modules/Jobs/components/JobListingCard/job-listing-card.module.scss
+++ b/src/Nowruz/modules/Jobs/components/JobListingCard/job-listing-card.module.scss
@@ -129,6 +129,19 @@
             margin-right: 0;
         }
     }
+
+    .cardFooterMobile {
+        align-items: center;
+        justify-content: center;
+        align-self: stretch;
+        display: flex;
+        border-top: 1px solid $color-grey-200;
+        padding: 20px 24px;
+
+        @media (min-width: 640px) {
+            display: none;
+        }
+    }
 }
 
 .notInterestedBtn {
