--- a/src/Nowruz/pages/jobs/List/list.module.scss
+++ b/src/Nowruz/pages/jobs/List/list.module.scss
@@ -42,8 +42,9 @@
     .list {
         margin-top: 24px;
         width: 720px;
+        max-width: 100%;
 
-        @media (max-width: 640px) {
+        @media (max-width: 768px) {
             width: 100%;
         }
     }
