fixed styling issues in mobile view

--- a/src/Nowruz/modules/Jobs/components/JobListingCard/job-listing-card.module.scss
+++ b/src/Nowruz/modules/Jobs/components/JobListingCard/job-listing-card.module.scss
@@ -76,6 +76,10 @@
             flex-wrap: wrap;
         }
 
+        .jobDescription {
+            width: 100%;
+        }
+
         .jobDescription * {
             line-height: 1.5rem;
             color: $color-grey-600;
